feat(ai-chat): refactor chat history management to use HttpSession and add product info handling